feat(api): correct readings (#42)
